@@ -15,9 +15,6 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 
-import os
-import sys
-import stat
 from cStringIO import StringIO
 
 import bzrlib
@@ -26,15 +23,11 @@ from bzrlib import (
     osutils,
     urlutils,
     )
-from bzrlib.errors import (ConnectionError,
-                           DependencyNotPresent,
+from bzrlib.errors import (DependencyNotPresent,
                            FileExists,
                            InvalidURLJoin,
                            NoSuchFile,
                            PathNotChild,
-                           TransportNotPossible,
-                           ConnectionError,
-                           DependencyNotPresent,
                            ReadError,
                            UnsupportedProtocol,
                            )
@@ -49,7 +42,6 @@ from bzrlib.transport import (_clear_protocol_handlers,
                               LateReadError,
                               register_lazy_transport,
                               register_transport_proto,
-                              _clear_protocol_handlers,
                               Transport,
                               )
 from bzrlib.transport.chroot import ChrootServer
@@ -625,14 +617,14 @@ class TestConnectedTransport(TestCase):
     """Tests for connected to remote server transports"""
 
     def test_parse_url(self):
-        t = ConnectedTransport('sftp://simple.example.com/home/source')
+        t = ConnectedTransport('http://simple.example.com/home/source')
         self.assertEquals(t._host, 'simple.example.com')
-        self.assertEquals(t._port, 22)
+        self.assertEquals(t._port, 80)
         self.assertEquals(t._path, '/home/source/')
         self.failUnless(t._user is None)
         self.failUnless(t._password is None)
 
-        self.assertEquals(t.base, 'sftp://simple.example.com/home/source/')
+        self.assertEquals(t.base, 'http://simple.example.com/home/source/')
 
     def test_parse_quoted_url(self):
         t = ConnectedTransport('http://ro%62ey:h%40t@ex%41mple.com:2222/path')
@@ -763,6 +755,80 @@ class TestRemoteTCPTransport(TestCase):
         """
         t = get_transport('bzr://host.com:666/')
         self.assertEquals('bzr://host.com:666/', t.base)
+
+
+class SSHPortTestMixin(object):
+    """Mixin class for testing SSH-based transports' use of ports in URLs.
+    
+    Unlike other connected transports, SSH-based transports (sftp, bzr+ssh)
+    don't have a default port, because the user may have OpenSSH configured to
+    use a non-standard port.
+    """
+
+    def make_url(self, netloc):
+        """Make a url for the given netloc, using the scheme defined on the
+        TestCase.
+        """
+        return '%s://%s/' % (self.scheme, netloc)
+
+    def test_relpath_with_implicit_port(self):
+        """SSH-based transports with the same URL are the same.
+        
+        Note than an unspecified port number is different to port 22 (because
+        OpenSSH may be configured to use a non-standard port).
+
+        So t.relpath(url) should always be '' if t.base is the same as url, but
+        raise PathNotChild if the ports in t and url are not both specified (or
+        both unspecified).
+        """
+        url_implicit_port = self.make_url('host.com')
+        url_explicit_port = self.make_url('host.com:22')
+
+        t_implicit_port = get_transport(url_implicit_port)
+        self.assertEquals('', t_implicit_port.relpath(url_implicit_port))
+        self.assertRaises(
+            PathNotChild, t_implicit_port.relpath, url_explicit_port)
+        
+        t_explicit_port = get_transport(url_explicit_port)
+        self.assertRaises(
+            PathNotChild, t_explicit_port.relpath, url_implicit_port)
+        self.assertEquals('', t_explicit_port.relpath(url_explicit_port))
+
+    def test_construct_with_no_port(self):
+        """If no port is specified, then the SSH-based transport's _port will
+        be None.
+        """
+        t = get_transport(self.make_url('host.com'))
+        self.assertEquals(None, t._port)
+
+    def test_url_with_no_port(self):
+        """If no port was specified, none is shown in the base URL."""
+        t = get_transport(self.make_url('host.com'))
+        self.assertEquals(self.make_url('host.com'), t.base)
+
+    def test_url_includes_port(self):
+        """An SSH-based transport's base will show the port if one was
+        specified, even if that port is 22, because we do not assume 22 is the
+        default port.
+        """
+        # 22 is the "standard" port for SFTP.
+        t = get_transport(self.make_url('host.com:22'))
+        self.assertEquals(self.make_url('host.com:22'), t.base)
+        # 666 is not a standard port.
+        t = get_transport(self.make_url('host.com:666'))
+        self.assertEquals(self.make_url('host.com:666'), t.base)
+
+
+class SFTPTransportPortTest(TestCase, SSHPortTestMixin):
+    """Tests for sftp:// transport (SFTPTransport)."""
+
+    scheme = 'sftp'
+
+
+class BzrSSHTransportPortTest(TestCase, SSHPortTestMixin):
+    """Tests for bzr+ssh:// transport (RemoteSSHTransport)."""
+
+    scheme = 'bzr+ssh'
 
 
 class TestTransportTrace(TestCase):
